eggenberg-talos-cluster-1/argocd-apps-configuration/uptime-kuma/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  labels:
    goldilocks.fairwinds.com/vpa-update-mode: InPlaceOrRecreate
